# fractal-generator

./: Cargo.toml  README.md
src/: fragment.glsl  koch_snowflake.frag  koch_snowflake_fragment.glsl  main.rs  mandelbrot.frag  simple.vert
