[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.34.0"
glow = "0.13.1"
glutin = "0.31.3"
glutin-winit = "0.4.2"
nalgebra = "0.32.5"
raw-window-handle = "0.5.2"
winit = "0.29.15"
